--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,49 @@
+/* Colour Variables */
+:root {
+  --purple-gradient: linear-gradient(225deg, #f76680 0%, #57007b 100%);
 
+  --dark-grey: #4a5568;
+}
+
+/* GENERAL */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Noto Sans", sans-serif;
+}
+
+body {
+  padding: 1.5em;
+}
+
+h1,
+h2,
+h3 {
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+  line-height: 1.6em;
+  margin-bottom: 1em;
+}
+
+h1 span.thin,
+h2 span.thin,
+h3 span.thin {
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+
+p {
+  color: var(--dark-grey);
+  font-weight: 300;
+}
+
+.purple-grad {
+  background: var(--purple-gradient);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
