--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -126,10 +126,11 @@ button:hover {
   background-color: #45a049;
 }
 
-button img {
+button .form-icon {
   width: 20px;
   height: 20px;
-  margin-left: 8px;
+  margin-left: 9px;
+  margin-right: 0px;
 }
 
 @media (max-width: 600px) {
