--- a/src/Contact/Contact.module.css
+++ b/src/Contact/Contact.module.css
@@ -18,7 +18,7 @@ p {
   margin-bottom: 30px;
 }
 
-.contact-footer {
+.contactFooter {
   text-align: center;
   font-size: 1.1em;
   color: #555;
@@ -28,24 +28,24 @@ p {
   gap: 8px;
 }
 
-.contact-footer a {
+.contactFooter a {
   color: #57007b;
   text-decoration: none;
   display: inline-flex;
   align-items: center;
 }
 
-.contact-footer a:hover {
+.contactFooter a:hover {
   text-decoration: underline;
 }
 
-.contact-footer img.fiverr-icon {
+.contactFooter img.fiverrIcon {
   width: 53px;
   height: 53px;
   vertical-align: middle;
 }
 
-.form-container {
+.formContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -56,7 +56,7 @@ p {
   margin: 30px auto;
 }
 
-.input-group {
+.inputGroup {
   position: relative;
   width: 100%;
   margin-bottom: 30px;
@@ -92,17 +92,17 @@ label {
   align-items: center;
 }
 
-input:focus ~ label,
-input:valid ~ label,
-textarea:focus ~ label,
-textarea:valid ~ label {
+input:focus~label,
+input:valid~label,
+textarea:focus~label,
+textarea:valid~label {
   top: -15px;
   left: 15px;
   font-size: 0.8em;
   color: #57007b;
 }
 
-.form-icon {
+.formIcon {
   width: 20px;
   height: 20px;
   margin-right: 8px;
@@ -126,7 +126,7 @@ button:hover {
   background-color: #45a049;
 }
 
-button .form-icon {
+button .formIcon {
   width: 20px;
   height: 20px;
   margin-left: 9px;
@@ -134,7 +134,7 @@ button .form-icon {
 }
 
 @media (max-width: 600px) {
-  .form-container {
+  .formContainer {
     padding: 15px;
   }
 
