--- a/src/Team/TeamMemberCard.module.css
+++ b/src/Team/TeamMemberCard.module.css
@@ -1,24 +1,4 @@
-.teamContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2em;
-}
-
-.teamSlider {
-  width: 100%;
-}
-
-.teamSliderWrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 35em;
-  gap: 1.5em;
-}
-
-/* .teamMemberCard {
+.teamMemberCard {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -27,49 +7,49 @@
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.2);
   border-radius: 2em;
   width: 20em;
-  height: 96%;
-} */
+  height: 33.5em;
+}
 
-/* .teamMemberImage {
+.teamMemberImage {
   border-radius: 50%;
   border: 5px solid #57007b;
   margin-bottom: 2em;
   padding: 3px;
   width: 10em;
   height: 10em;
-} */
+}
 
-/* .teamMemberImage img {
+.teamMemberImage img {
   border-radius: 50%;
   object-fit: cover;
   width: 100%;
   height: 100%;
-} */
+}
 
-/* .teamMemberContent {
+.teamMemberContent {
   display: flex;
   flex-direction: column;
   align-items: center;
-} */
+}
 
-/* .teamMemberTitle {
+.teamMemberTitle {
   position: relative;
   font-size: 1.5rem;
   font-weight: 500;
-} */
+}
 
-/* .teamMemberName {
+.teamMemberName {
   margin-bottom: 0em;
   color: #57007b;
-} */
+}
 
-/* .teamMemberDescription {
+.teamMemberDescription {
   text-align: center;
   font-size: 1.1rem;
   margin: 1em 0;
-} */
+}
 
-/* .readMoreBtn {
+.readMoreBtn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,4 +64,4 @@
   border-radius: 0.5em;
   cursor: pointer;
   transition: background-color 0.3s;
-} */
+}
