--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -3,7 +3,7 @@
   padding: 0em, 1.5em;
 }
 
-#home h1 {
+h1 {
   font-optical-sizing: auto;
   font-weight: 800;
   font-style: normal;
@@ -12,7 +12,7 @@
   margin-bottom: 1em;
 }
 
-#home p {
+p {
   font-optical-sizing: auto;
   font-size: 1em;
   text-align: left;
@@ -20,11 +20,11 @@
   color: var(--dark-grey);
 }
 
-#home p:last-child {
+p:last-child {
   margin-bottom: 0px;
 }
 
-.circle-decoration {
+.circleDecoration {
   width: 20%;
   height: auto;
 }
