--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,16 @@
 *::after {
   box-sizing: border-box;
 }
+
 /*
     2. Remove default margin
   */
 * {
   margin: 0;
   padding: 0;
+  font-family: "Noto Sans", sans-serif;
 }
+
 /*
     Typographic tweaks!
     3. Add accessible line-height
@@ -23,6 +26,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
+
 /*
     5. Improve media defaults
   */
@@ -34,6 +38,7 @@ svg {
   display: block;
   max-width: 100%;
 }
+
 /*
     6. Remove built-in form typography styles
   */
@@ -43,6 +48,7 @@ textarea,
 select {
   font: inherit;
 }
+
 /*
     7. Avoid text overflows
   */
@@ -55,6 +61,7 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
+
 /*
     8. Create a root stacking context
   */
