--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,19 @@ h6 {
   overflow-wrap: break-word;
 }
 
+p {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 162%;
+  color: #2D3748;
+  margin-bottom: 2.7rem;
+}
+
+/* remember to always wrap p elements inside a div!!! */
+div p:last-child {
+  margin-bottom: 0;
+}
+
 /*
     8. Create a root stacking context
   */
@@ -72,10 +85,4 @@ h6 {
 
 :root {
   font-size: 62.5%;
-}
-
-p {
-  font-size: 1.5rem;
-  font-weight: 400;
-  line-height: 162%;
 }
