start hero section

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,15 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+section {
+  padding-left: 8.4%;
+  padding-right: 8.4%;
+}
+
+section:nth-child(odd) {
+  background-color: var(--lightBlueGrey);
+}
+
 /*
     5. Improve media defaults
   */
@@ -85,10 +94,15 @@ div p:last-child {
 
 :root {
   font-size: 62.5%;
-  --mediumGrey: #2d3748; /* paragraphs */
-  --darkGrey: #1a202c; /* titles */
+  --mediumGrey: #2d3748;
+  /* paragraphs */
+  --darkGrey: #1a202c;
+  /* titles */
   --gradient: linear-gradient(225deg, #f76680 0%, #57007b 100%);
-  --purple: #57007b; /* purple buttons */
-  --lightBlueGrey: #f9f9ff; /* backgrounds */
-  --navy: #3c417c; /* hamburger and titles */
+  --purple: #57007b;
+  /* purple buttons */
+  --lightBlueGrey: #f9f9ff;
+  /* backgrounds */
+  --navy: #3c417c;
+  /* hamburger and titles */
 }
