--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -2,7 +2,8 @@ h1 {
   font-size: 3.6rem;
   line-height: 5rem;
   font-weight: 800;
-  margin-bottom: 3rem;
+  margin-top: 4rem;
+  margin-bottom: 2.5rem;
 }
 
 .textGradient {
@@ -18,4 +19,11 @@ h1 {
 
 .heroPara {
   font-size: 2.0rem;
+  margin-bottom: 4rem;
+}
+
+.heroImage {
+  width: 100%;
+  height: auto;
+  margin-bottom: 4rem;
 }
