--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
 section {
   padding-left: 8.4%;
   padding-right: 8.4%;
+  border-bottom: solid 0.2rem var(--lineColour);
 }
 
 section:nth-child(odd) {
@@ -105,4 +106,5 @@ div p:last-child {
   /* backgrounds */
   --navy: #3c417c;
   /* hamburger and titles */
+  --lineColour: #E7DAED;
 }
