--- a/src/Reusables/SectionTitle/SectionTitle.module.css
+++ b/src/Reusables/SectionTitle/SectionTitle.module.css
@@ -3,7 +3,7 @@
   color: var(--navy);
   font-weight: 700;
   line-height: 118%;
-  margin-top: 5rem;
+  padding-top: 5rem;
   margin-bottom: 1rem;
 }
 
