--- a/src/Reusables/MemberProfile/MemberProfile.module.css
+++ b/src/Reusables/MemberProfile/MemberProfile.module.css
@@ -28,6 +28,7 @@
   padding: 0.3rem;
   height: 15.5rem;
   width: 15.5rem;
+  object-fit: contain;
   border-radius: 50%;
   margin-bottom: 1.5rem;
 }
