--- a/src/About/About.module.css
+++ b/src/About/About.module.css
@@ -1,3 +1,11 @@
+.circleWrapper {
+  display: flex;
+  /* width: 100%; */
+  justify-content: flex-end;
+}
+
+
+
 .aboutImage {
   padding-bottom: 2.9rem;
 }
