override swiper dots

--- a/src/index.css
+++ b/src/index.css
@@ -109,4 +109,5 @@ div p:last-child {
   --navy: #3c417c;
   /* hamburger and titles */
   --lineColour: #E7DAED;
+  --swiper-theme-color: #57007b;
 }
