--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ section {
   padding-left: 8.4%;
   padding-right: 8.4%;
   border-bottom: solid 0.2rem var(--lineColour);
+  scroll-margin-top: 8.9rem; /* this prevent the top of the section appearing behind the NavBar when the NavBar has a fixed-position on the screen */
 }
 
 /*
@@ -108,6 +109,6 @@ div p:last-child {
   /* backgrounds */
   --navy: #3c417c;
   /* hamburger and titles */
-  --lineColour: #E7DAED;
+  --lineColour: #e7daed;
   --swiper-theme-color: #57007b;
 }
