--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -1,3 +1,7 @@
+.heroSection {
+  margin-top: 8.9rem;
+}
+
 h1 {
   font-size: 3.6rem;
   line-height: 5rem;
@@ -18,7 +22,7 @@ h1 {
 }
 
 .heroPara {
-  font-size: 2.0rem;
+  font-size: 2rem;
   margin-bottom: 4rem;
 }
 
