fixes semi circle on Our Team section and add margin to H1 in hero

--- a/src/OurTeam/OurTeam.module.css
+++ b/src/OurTeam/OurTeam.module.css
@@ -1,3 +1,9 @@
 .OurTeamSectionContainer {
-  padding-bottom: 7.8rem;
+  padding-bottom: 7.5rem;
+}
+
+.circleWrapper {
+  display: flex;
+  /* width: 100%; */
+  justify-content: flex-end;
 }
