--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -28,7 +28,11 @@ h1 {
 }
 
 .heroImage {
-  width: 100%;
+  max-width: 480px;
   height: auto;
   margin-bottom: 4rem;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+@media (min-width: 768px) {}
