--- a/src/Reusables/ServicesCard/ServicesCard.module.css
+++ b/src/Reusables/ServicesCard/ServicesCard.module.css
@@ -3,15 +3,26 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: solid 0.2rem var(--lineColour);
+  border-radius: 1.6rem;
   margin-bottom: 1.3rem;
   width: 31.8rem;
   height: 30rem;
 }
 
 .imageContainer {
+  display: felx;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 15rem;
   border-radius: 1.5rem 1.5rem 0 0;
+}
+
+.servicesImage {
+  width: 13.9rem;
+  height: 13.9rem;
 }
 
 .descriptionContainer {
