--- a/src/Reusables/ServicesCard/ServicesCard.module.css
+++ b/src/Reusables/ServicesCard/ServicesCard.module.css
@@ -4,9 +4,10 @@
   justify-content: center;
   align-items: center;
   border: solid 0.2rem var(--lineColour);
+  padding: 0.01rem;
   border-radius: 1.6rem;
   margin-bottom: 1.3rem;
-  width: 31.8rem;
+  width: 32.65rem;
   height: 30rem;
 }
 
