--- a/src/Reusables/ServicesCard/ServicesCard.module.css
+++ b/src/Reusables/ServicesCard/ServicesCard.module.css
@@ -12,16 +12,17 @@
 }
 
 .imageContainer {
-  display: felx;
-  flex-direction: column;
+  display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
   width: 100%;
   height: 15rem;
   border-radius: 1.5rem 1.5rem 0 0;
 }
 
 .servicesImage {
+  border-radius: 50%;
   width: 13.9rem;
   height: 13.9rem;
 }
