--- a/src/Reusables/ServicesCard/ServicesCard.module.css
+++ b/src/Reusables/ServicesCard/ServicesCard.module.css
@@ -8,7 +8,7 @@
   border-radius: 1.6rem;
   margin-bottom: 1.3rem;
   width: 32.65rem;
-  height: 30rem;
+  height: 28rem;
 }
 
 .imageContainer {
@@ -18,22 +18,19 @@
   position: relative;
   width: 100%;
   height: 15rem;
-  border-radius: 1.5rem 1.5rem 0 0;
+  border-radius: 1.4rem 1.4rem 0 0;
 }
 
 .servicesImage {
   border-radius: 50%;
+  padding: 0.5rem;
   width: 13.9rem;
   height: 13.9rem;
 }
 
 .descriptionContainer {
   width: 100%;
-  height: 15rem;
-  padding: 1rem 2rem;
-  border-radius: 0 0 1.5rem 1.5rem;
-}
-
-.subtile {
-  margin-bottom: 1rem;
+  height: 13rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  border-radius: 0 0 1.4rem 1.4rem;
 }
