--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -1,4 +1,6 @@
 .heroSection {
+  display: flex;
+  flex-direction: column;
   margin-top: 12.9rem;
 }
 
@@ -28,11 +30,60 @@ h1 {
 }
 
 .heroImage {
-  max-width: 480px;
+  width: 48rem;
   height: auto;
   margin-bottom: 4rem;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 3.1rem;
+
 }
 
-@media (min-width: 768px) {}
+@media (min-width: 800px) {
+  .heroDesktop {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    margin-bottom: 9rem;
+  }
+
+  .heroText {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: flex-start;
+  }
+
+
+  .heroText h1 {
+    font-size: 5rem;
+    line-height: 8rem;
+    margin-top: 0;
+  }
+
+  .heroText p {
+    font-size: 1.8rem;
+  }
+
+  .heroImage {
+    height: auto;
+    width: 50%;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: 1200px) {
+    .heroText h1 {
+      font-size: 9rem;
+      line-height: 14rem;
+    }
+
+    .heroText p {
+      font-size: 3.2rem;
+    }
+  }
+
+
+
+}
