--- a/src/Reusables/SemiCircle/SemiCircle.module.css
+++ b/src/Reusables/SemiCircle/SemiCircle.module.css
@@ -2,6 +2,12 @@
   width: 17%;
 }
 
+@media (min-width: 800px) {
+  .semiCircle {
+    width: 10%;
+  }
+}
+
 .circle-wrapper .circleRight {
   justify-self: right;
 }
