--- a/src/index.css
+++ b/src/index.css
@@ -113,3 +113,10 @@ div p:last-child {
   --lineColour: #e7daed;
   --swiper-theme-color: #57007b;
 }
+
+@media (min-width: 800px) {
+  p {
+    font-size: 2.1rem;
+    line-height: 162%;
+  }
+}
