--- a/src/Reusables/MemberProfile/MemberProfile.module.css
+++ b/src/Reusables/MemberProfile/MemberProfile.module.css
@@ -20,7 +20,8 @@
   border-radius: 1.5rem;
   width: 85%;
   height: 53rem;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+  border: solid 0.2rem var(--lineColour);
+  /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2); */
 }
 
 .teamMemberImage {
@@ -74,34 +75,61 @@
 
   .teamMemberCard {
     flex-direction: row;
-    height: 30rem;
+    width: 65%;
+    height: fit-content;
   }
 
   .teamMemberImage {
     height: 17rem;
     width: 17rem;
-    margin-right: 2rem;
+    margin-right: 2.5rem;
+    margin-bottom: 0;
   }
 
   .teamMemberContent {
     height: 100%;
     width: 50%;
     padding: 2rem;
-  }
-
-  .teamMemberDescription {
-    padding: 0rem;
+    align-items: start;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
   }
 
   .teamMemberName {
-    font-size: 3rem;
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+    order: 0;
   }
 
   .teamMemberTitle {
     font-size: 2rem;
+    order: 2;
+    line-height: 2rem;
+    ;
+  }
+
+  .teamMemberDescription {
+    padding: 0rem;
+    text-align: left;
+    order: 3;
+    margin-bottom: 0;
   }
 
   .SocialsContainer {
-    width: 50%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    justify-content: end;
+    order: 1;
   }
+
+  .teamMemberSocialIcon {
+    margin-left: 3rem;
+  }
+
+  .teamMemberContent {
+    width: 70%;
+  }
+
+
 }
