--- a/src/Reusables/MemberProfile/MemberProfile.module.css
+++ b/src/Reusables/MemberProfile/MemberProfile.module.css
@@ -21,6 +21,7 @@
   width: 85%;
   height: 53rem;
   border: solid 0.2rem var(--lineColour);
+  background-color: white;
   /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2); */
 }
 
@@ -29,7 +30,7 @@
   padding: 0.3rem;
   height: 15.5rem;
   width: 15.5rem;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 50%;
   margin-bottom: 1.5rem;
 }
@@ -55,9 +56,11 @@
   display: flex;
   width: 75%;
   padding: 0rem 2.5rem;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
+  gap: 3rem
 }
+
 
 .teamMemberSocialIcon {
   width: 2.5rem;
@@ -65,9 +68,11 @@
   cursor: pointer;
 }
 
+.teamMemberSocialIcon:hover {
+  background-color: var(--purple);
+}
 
-
-@media (min-width: 800px) {
+@media (min-width: 1400px) {
 
   .teamMemberCardContainer {
     height: 40rem;
