--- a/src/Nav/Nav.module.css
+++ b/src/Nav/Nav.module.css
@@ -1,30 +1,25 @@
-/* TO FIX: NAV BAR loses composure after 1600px vw */
 .NavContainer {
-  width: 100vw;
+  position: sticky;
+  top: 0;
+  display: flex;
+  flex-direction: row;
   height: 8.9rem;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
   padding-left: 8.4%;
   padding-right: 8.4%;
-  position: fixed;
-  top: 0;
-  background-color: white;
-  z-index: 1000;
-  /* border: solid; */
 }
 
 .logo {
   height: 6.3rem;
-  /* border: solid; */
-  position: absolute;
-  top: 2.2rem;
+  width: auto;
 }
 
 .HamburgerContainer {
+  display: flex;
   width: 4rem;
   height: auto;
-  /* border: solid; */
-  position: absolute;
-  right: 8.4%;
-  top: 3.5rem;
 }
 
 .HamburgerIcon {
@@ -34,9 +29,9 @@
 
 .MenuLinks {
   list-style-type: none;
-  width: 40%;
+  width: 30%;
   position: absolute;
-  right: 8.4%;
+  right: 1rem;
   top: 8.7rem;
   border-radius: 1.1rem;
   background-color: white;
