--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -1,7 +1,7 @@
 .heroSection {
   display: flex;
   flex-direction: column;
-  margin-top: 12.9rem;
+  margin-top: 0rem;
 }
 
 h1 {
@@ -40,6 +40,10 @@ h1 {
 }
 
 @media (min-width: 800px) {
+  .heroSection {
+    margin-top: 12.9rem;
+  }
+
   .heroDesktop {
     display: flex;
     flex-direction: row;
