--- a/src/Nav/Nav.module.css
+++ b/src/Nav/Nav.module.css
@@ -31,7 +31,7 @@
 
 .MenuLinks {
   list-style-type: none;
-  width: 30%;
+  width: 45%;
   position: absolute;
   right: 1rem;
   top: 8.7rem;
@@ -80,4 +80,58 @@
 
 a {
   text-decoration: none;
+}
+
+@media (min-width: 768px) {
+  .NavContainer {
+    display: none;
+  }
+
+  .NavDesktop {
+    position: sticky;
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    height: 8.9rem;
+    justify-content: space-between;
+    align-items: flex-end;
+    /* Keep this as flex-end */
+    background-color: #6e80fc;
+    padding-left: 8.4%;
+    padding-right: 8.4%;
+    z-index: 1000;
+  }
+
+  .LinksDesktop {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    list-style: none;
+    align-self: center;
+    gap: 5rem;
+    /* Change this to center */
+  }
+
+  .logo {
+    align-self: flex-end;
+    /* Ensure the logo is aligned to flex-end */
+  }
+
+  .ListItemDesktop {
+    font-size: 2rem;
+    font-weight: 650;
+
+
+  }
+
+  .ListItemDesktop a {
+    display: flex;
+    color: white;
+    white-space: nowrap;
+
+  }
+
+  .ListItemDesktop a:hover {
+    color: #57007b;
+  }
 }
