--- a/src/Nav/Nav.module.css
+++ b/src/Nav/Nav.module.css
@@ -3,7 +3,7 @@
   top: 0;
   display: flex;
   flex-direction: row;
-  height: 8.9rem;
+  height: 8rem;
   justify-content: space-between;
   align-items: flex-end;
   background-color: white;
@@ -12,16 +12,24 @@
   z-index: 1000;
 }
 
+.MobContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
 .logo {
-  height: 6.3rem;
+  height: 6.5rem;
   width: auto;
+  padding-bottom: 1rem;
 }
 
 .HamburgerContainer {
   display: flex;
-  width: 4rem;
-  height: auto;
-  padding-bottom: 1.2rem;
+  width: auto;
+  height: 5rem;
+  padding-bottom: 1rem;
 }
 
 .HamburgerIcon {
@@ -92,6 +100,7 @@ a {
   }
 
   .NavDesktop {
+
     position: sticky;
     top: 0;
     display: flex;
@@ -99,7 +108,9 @@ a {
     height: 8.9rem;
     justify-content: space-between;
     align-items: flex-end;
-    background-color: #6e80fc;
+    background-color: var(--lightBlueGrey);
+    border-bottom: solid 0.2rem var(--lineColour);
+    /* box-shadow: 0px 4px 5px 2px rgba(225, 227, 230, 0.719); */
     padding-left: 8.4%;
     padding-right: 8.4%;
     z-index: 1000;
@@ -111,7 +122,7 @@ a {
     justify-content: space-between;
     list-style: none;
     align-self: center;
-    gap: 5rem;
+    gap: 3.5rem;
     /* Change this to center */
   }
 
@@ -121,19 +132,22 @@ a {
   }
 
   .ListItemDesktop {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-weight: 650;
   }
 
   .ListItemDesktop a {
     display: flex;
-    color: white;
+    color: var(--navy);
     white-space: nowrap;
 
   }
 
   .ListItemDesktop a:hover {
-    color: #57007b;
+    background: var(--gradient);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 }
 
@@ -143,6 +157,7 @@ a {
   }
 
   .NavDesktop {
+    color: black;
     position: sticky;
     top: 0;
     display: flex;
@@ -150,7 +165,8 @@ a {
     height: 8.9rem;
     justify-content: space-between;
     align-items: flex-end;
-    background-color: #6e80fc;
+    background-color: var(--lightBlueGrey);
+    border-bottom: solid 0.2rem var(--lineColour);
     padding-left: 8.4%;
     padding-right: 8.4%;
     z-index: 1000;
@@ -180,13 +196,14 @@ a {
 
   .ListItemDesktop a {
     display: flex;
-    color: white;
     white-space: nowrap;
-
   }
 
   .ListItemDesktop a:hover {
-    color: #57007b;
+    background: var(--gradient);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 
 }
