--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ section {
 
 /*
    This works because the first child is the nav (not a section) and so first occurance of section is an even child (Hero) which is don't want highlighted   */
-section:nth-child(odd) {
+section:nth-child(even) {
   background-color: var(--lightBlueGrey);
 }
 
