--- a/src/Reusables/MemberProfile/MemberProfile.module.css
+++ b/src/Reusables/MemberProfile/MemberProfile.module.css
@@ -69,7 +69,9 @@
 }
 
 .teamMemberSocialIcon:hover {
-  background-color: var(--purple);
+  opacity: 0.9;
+  transform: translateY(-0.2rem);
+  transition: transform 0.3s ease-in-out;
 }
 
 @media (min-width: 1400px) {
@@ -127,9 +129,7 @@
     order: 1;
   }
 
-  .teamMemberSocialIcon {
-    margin-left: 3rem;
-  }
+
 
   .teamMemberContent {
     width: 70%;
