--- a/src/Reusables/MemberProfile/MemberProfile.module.css
+++ b/src/Reusables/MemberProfile/MemberProfile.module.css
@@ -22,7 +22,7 @@
   height: 53rem;
   border: solid 0.2rem var(--lineColour);
   background-color: white;
-  /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2); */
+
 }
 
 .teamMemberImage {
@@ -81,59 +81,65 @@
   }
 
   .teamMemberCard {
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr;
     width: 65%;
-    height: fit-content;
+    height: 29rem;
+    align-items: center;
+    justify-content: center;
   }
 
   .teamMemberImage {
-    height: 17rem;
-    width: 17rem;
-    margin-right: 2.5rem;
+    grid-column: 1/2;
+    grid-row: 1;
+    justify-self: center;
+    align-self: center;
+    width: 80%;
+    height: auto;
     margin-bottom: 0;
   }
 
   .teamMemberContent {
-    height: 100%;
-    width: 50%;
-    padding: 2rem;
-    align-items: start;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    grid-column: 2/4;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 2fr;
+    height: 29rem;
+    width: 100%;
+    padding-top: 2rem;
+    padding-right: 3rem;
+    padding-bottom: 2rem;
+    padding-left: 0;
   }
 
   .teamMemberName {
+    grid-row: 1;
     font-size: 2.5rem;
     line-height: 2.5rem;
-    order: 0;
   }
 
   .teamMemberTitle {
+    grid-column: 1/2;
     font-size: 2rem;
-    order: 2;
+    grid-row: 2;
     line-height: 2rem;
+    margin: 0;
   }
 
   .teamMemberDescription {
     padding: 0rem;
     text-align: left;
-    order: 3;
+    grid-column: 1/4;
+    grid-row: 3;
     margin-bottom: 0;
   }
 
   .SocialsContainer {
+    grid-column: 2/4;
     width: 100%;
-    margin: 0;
     padding: 0;
     justify-content: end;
-    order: 1;
+    grid-row: 1;
   }
-
-
-
-  .teamMemberContent {
-    width: 70%;
-  }
-
-
 }
