--- a/src/Nav/Nav.module.css
+++ b/src/Nav/Nav.module.css
@@ -30,26 +30,21 @@
   width: 45%;
   position: absolute;
   right: 1rem;
-  top: 8.7rem;
+  top: 10rem;
+  background-color: white;
   border-radius: 1.1rem;
   border: solid 0.1rem var(--lineColour);
-  background-color: white;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .mobileMenuItem,
 .mobileMenuItemHover {
-  border-bottom: solid 0.1rem var(--lineColour);
   text-align: center;
   padding: 1.7rem;
   font-size: 2rem;
+  font-weight: bold;
   color: var(--navy);
-}
-
-.mobileMenuItemHover {
-  background-color: var(--purple);
-  color: white;
-  font-weight: 700;
+  border-bottom: solid 0.1rem var(--lineColour);
 }
 
 .mobileMenuItemHover:first-child {
