--- a/src/Nav/Nav.module.css
+++ b/src/Nav/Nav.module.css
@@ -35,6 +35,13 @@
   border-radius: 1.1rem;
   border: solid 0.1rem var(--lineColour);
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-130%);
+  transition: transform 0.5s ease-in-out;
+  z-index: 1000;
+}
+
+.mobileMenu.open {
+  transform: translateY(0);
 }
 
 .mobileMenuItem,
