--- a/src/Nav/Nav.module.css
+++ b/src/Nav/Nav.module.css
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 8.4%;
-  padding-right: 8.4%;
+  padding-left: 3.4%;
+  padding-right: 3.4%;
   position: sticky;
   height: 9rem;
   top: 0;
@@ -27,8 +27,8 @@
 
 .mobileMenu {
   width: 45%;
-  right: 3.8rem;
-  top: 12.6rem;
+  right: 3.4%;
+  top: 10.3rem;
   position: fixed;
   list-style-type: none;
   border-radius: 1.1rem;
