changes social media icons to purple and sets background colour to team member card

--- a/src/Reusables/MemberProfile/MemberProfile.module.css
+++ b/src/Reusables/MemberProfile/MemberProfile.module.css
@@ -21,7 +21,7 @@
   width: 85%;
   height: 53rem;
   border: solid 0.2rem var(--lineColour);
-  background-color: white;
+  background-color: var(--lightBlueGrey);
 
 }
 
@@ -88,6 +88,7 @@
     height: 29rem;
     align-items: center;
     justify-content: center;
+    background-color: var(--lightBlueGrey);
   }
 
   .teamMemberImage {
