--- a/src/Contact/Contact.module.css
+++ b/src/Contact/Contact.module.css
@@ -76,17 +76,15 @@ textarea {
 }
 
 .submitBtn {
-  font-family: noto-sans, sans-serif;
-  padding: 19px 30px;
-  font-size: 1.5rem;
-  /* background-color: #57007b; */
-  background: var(--gradient);
-  color: white;
-  font-weight: 800;
-  letter-spacing: 0.2rem;
   border: none;
-  border-radius: 10px;
+  border-radius: 0.5rem;
+  background: var(--purple);
+  color: white;
+  padding: 0.5rem 1.5rem;
+  font-size: 2rem;
+  font-weight: bold;
   cursor: pointer;
+  transition: opacity 0.3s ease, transform 0.2s ease;
 }
 
 
