--- a/src/OurServices/OurServices.module.css
+++ b/src/OurServices/OurServices.module.css
@@ -1,3 +1,24 @@
-.servicesContainer {
-  margin-bottom: 4.8rem;
+.servicesTextContainer {
+  display: none;
+}
+
+@media (min-width: 800px) {
+  .servicesTextContainer {
+    display: block;
+    margin-bottom: 4rem;
+  }
+
+  .servicesTextContainer p {
+    margin-bottom: 1rem;
+  }
+
+  .servicesContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3rem;
+    margin-bottom: 4.8rem;
+  }
 }
