--- a/src/Reusables/ServicesCard/ServicesCard.module.css
+++ b/src/Reusables/ServicesCard/ServicesCard.module.css
@@ -1,63 +1,54 @@
 .cardContainer {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: solid 0.2rem var(--lineColour);
-  padding: 0.01rem;
-  border-radius: 1.6rem;
-  margin-bottom: 1.3rem;
-  width: 30rem;
-  height: 28rem;
 }
 
-.imageContainer {
+.servicesCard {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  position: relative;
-  width: 100%;
-  height: 15rem;
-  border-radius: 1.4rem 1.4rem 0 0;
+  width: 35rem;
+  height: 35rem;
+  padding: 2rem;
+  border-radius: 1.6rem;
+  border: solid 0.2rem var(--lineColour);
+  margin-bottom: 1.3rem;
+  background: var(--lightBlueGrey);
 }
 
 .servicesImage {
+  width: 15.9rem;
+  height: 15.9rem;
   border-radius: 50%;
-  padding: 0.5rem;
-  width: 13.9rem;
-  height: 13.9rem;
+  border: solid 0.2rem var(--lineColour);
 }
 
-.descriptionContainer {
-  width: 100%;
-  height: 13rem;
-  padding: 0.5rem 1rem 0.5rem 1rem;
-  border-radius: 0 0 1.4rem 1.4rem;
+.subtitle {
+  font-weight: bold;
 }
 
+/* Media Query */
 @media (min-width: 800px) {
-  .cardContainer {
-    flex-direction: row;
-    width: 100%;
-    height: fit-content;
+  .descriptionText {
+    font-size: 1.5rem;
   }
 
-  .descriptionContainer {
+  .servicesCard {
+    margin-bottom: 0rem;
+  }
+
+  .servicesCard {
     display: flex;
     flex-direction: column;
-    height: 20rem;
-    border-radius: 0 1.4rem 1.4rem 0;
-    padding: 3rem;
-    justify-content: center;
-  }
-
-  .imageContainer {
-    height: 20rem;
-    width: 35%;
-    border-radius: 1.4rem 0 0 1.4rem;
-  }
-
-  h3 {
-    font-size: 2rem;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 30rem;
+    height: 40rem;
+    padding: 2.5rem;
+    border-radius: 0.6rem;
+    border: solid 0.2rem var(--lineColour);
+    background: var(--lightBlueGrey);
   }
 }
