--- a/src/OurServices/OurServices.module.css
+++ b/src/OurServices/OurServices.module.css
@@ -16,6 +16,27 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    margin-bottom: 4.8rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .servicesTextContainer {
+    display: block;
+    margin-bottom: 4rem;
+  }
+
+  .servicesTextContainer p {
+    margin-bottom: 1rem;
+  }
+
+  .servicesContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     gap: 3rem;
