--- a/src/Contact/Contact.module.css
+++ b/src/Contact/Contact.module.css
@@ -11,6 +11,7 @@
   border-radius: 0.5rem;
   background-color: var(--lightBlueGrey);
   border: solid 0.2rem var(--lineColour);
+  box-shadow: 5px 5px 8px rgba(125, 125, 125, 0.2);
 }
 
 form {
@@ -18,6 +19,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
 }
 
 /* .gradientBg {
@@ -76,22 +78,30 @@ textarea {
 }
 
 .submitBtn {
+  width: 13.5rem;
+  height: 4.2rem;
   border: none;
   border-radius: 0.5rem;
   background: var(--purple);
   color: white;
-  padding: 0.5rem 1.5rem;
   font-size: 2rem;
+  line-height: 2rem;
   font-weight: bold;
   cursor: pointer;
   transition: opacity 0.3s ease, transform 0.2s ease;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+  box-shadow: 5px 5px 8px rgba(125, 125, 125, 0.2);
 }
 
-
+.submitBtn:hover {
+  opacity: 0.8;
+}
 
 .submitBtn:active {
-  transform: translateY(2px);
+  transform: scale(1.05);
 }
+
 
 #name {
   padding-top: 2.5rem;
@@ -151,6 +161,12 @@ textarea {
 
   .formGroup textarea {
     width: 99.5%;
+  }
+
+  .submitBtn {
+    font-size: 2rem;
+    height: 4.2rem;
+    margin-bottom: 5rem;
   }
 
 
