--- a/src/Reusables/ServicesCard/ServicesCard.module.css
+++ b/src/Reusables/ServicesCard/ServicesCard.module.css
@@ -16,6 +16,7 @@
   border: solid 0.2rem var(--lineColour);
   margin-bottom: 1.3rem;
   background: var(--lightBlueGrey);
+  box-shadow: 5px 5px 8px rgba(125, 125, 125, 0.2);
 }
 
 .servicesImage {
@@ -50,5 +51,6 @@
     border-radius: 0.6rem;
     border: solid 0.2rem var(--lineColour);
     background: var(--lightBlueGrey);
+    box-shadow: 5px 5px 8px rgba(125, 125, 125, 0.2);
   }
 }
