--- a/src/Reusables/MemberProfile/MemberProfile.module.css
+++ b/src/Reusables/MemberProfile/MemberProfile.module.css
@@ -69,6 +69,7 @@
   width: 38px;
   height: 38px;
   cursor: pointer;
+  box-shadow: 5px 5px 8px rgba(125, 125, 125, 0.2);
 }
 
 .teamMemberSocialIcon:hover {
